# mycxx

./: .gitignore  Alignment.cpp  Array.cpp  AutoDecltype.cpp  CMakeLists.txt  Calculator.cpp  Declaration.cpp  Enumeration.cpp  Evaluation.cpp  Expression.cpp  FloatingPoint.cpp  FundamentalTypes.cpp  FundamentalTypesTest.cpp  HelloWorld.cpp  Initialization.cpp  InitializerList.cpp  Integer.cpp  Move.cpp  ObjectLifeTime.cpp  Pointer.cpp  README.md  SharedPointer.cpp  Statement.cpp  String.cpp  Struct.cpp  TypeAlias.cpp  Union.cpp  Utils.hpp  Vector.cpp
res/jump-table/: test-if-else.cpp  test-if-else.s  test-if-o2.s  test-if.cpp  test-if.s  test-switch-o2.s  test-switch.cpp  test-switch.s
